# music-discovery-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: __main__.py  app.py  config.py
src/agents/: definitions.py  orchestrator.py  prompts.py
src/models/: __init__.py  artist.py  recommendation.py  taste_profile.py
src/storage/: base.py  file_storage.py
src/tools/: deduplication.py  recommendations.py  server.py  taste_profile.py
tests/: test_deduplication.py  test_save_recommendations.py  test_taste_profile.py  test_update_profile.py
tests/fixtures/: sample_profile.json
